--- a/package.json
+++ b/package.json
@@ -48,12 +48,13 @@
     "build-public": "mkdir -p lib/public && cp src/public/* lib/public/"
   },
   "dependencies": {
+    "apollo-server": "^0.1.2",
     "babel-runtime": "5.8.34",
     "dataloader": "1.1.0",
     "express": "4.13.4",
-    "express-graphql": "0.4.13",
-    "graphql": "0.4.18",
-    "graphql-relay": "0.3.6",
+    "express-graphql": "^0.5.3",
+    "graphql": "^0.5.0",
+    "graphql-relay": "^0.4.2",
     "isomorphic-fetch": "2.2.1",
     "react": "0.14.7"
   },
