--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "apollo-server": "^0.1.2",
+    "apollo-tracer": "^0.1.3",
     "babel": "^5.8.3",
     "babel-polyfill": "^6.9.1",
     "babel-runtime": "5.8.34",
