add tracer proxy option

--- a/ckaws.yml
+++ b/ckaws.yml
@@ -1,9 +1,11 @@
 api:
   image: swapi:latest
+  container_name: swapi
   ports:
     - "8080:8080"
 graphql:
   image: swapi-graphql:latest
+  container_name: graphql
   ports:
     - "3000:3000"
   links:
@@ -12,5 +14,6 @@ graphql:
     - NODE_PORT=3000
     - NODE_ENV=production
     - TRACER_ENABLED=true
+    - TRACER_PROXY=http://scproxy.corp.creditkarma.com:3128/
     - API_CACHE=false
     - API_HOST=http://swapi:8080
